assets/css/wpos.css
/* CSS Document */
html, body {
    margin: 0;
    padding: 0;
    overflow: hidden;
}
body {
	background-color:#000000 !important;
    min-height: 100vh !important;
}
#wrapper {
	margin: auto;
    height: auto;
	max-width: 1152px;
    min-height: 100vh;
    padding: 0;
    background-color: #FFF;
    z-index: 1;
}
.ui-tabs-panel {
    position: relative;
    min-height: calc(100vh - 45px);
    padding: 12px 10px 40px 10px !important;
}
.ui-dialog.setup-dialog {
    z-index: 3100 !important;
}
#items {
    min-height: 300px;
}
#totals {
    width:calc(100% - 13px);
    margin-top:10px;
    padding-bottom: 40px;
    position: absolute;
    bottom: 0;
}
#loginmodal {
    position:absolute;
    left:0;
    top:0;
    right: 0;
    width:100%;
    height:100vh;
    background-color:#000000;
    z-index: 3000;
}
#loginbox {
    width: 400px;
    height: 380px;
    left:50%;
    margin-left:-200px;
    margin-top: 60px;
    text-align: center;
}
#loginbox .widget-main {
    padding: 16px 20px 20px;
    min-height: 100%;
}
#loginbox .input-icon {
    max-width: 320px;
    margin: 0 auto;
}
#login-banner {
    padding: 10px 12px !important;
    margin-bottom: 0 !important;
}
#reportcontain {
    border: solid 1px #ccc;
    width: 100%;
    max-width: 550px;
    min-width: 480px;
    -moz-box-shadow:    3px 3px 5px 6px #ccc;
    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
    box-shadow:         3px 3px 5px 6px #ccc;
    min-height: 600px;
    overflow-x: auto !important;
}
.totalsbox {
    display: inline-block;
    max-width: 400px;
}
.totalslabel{
    display: inline-block;
    font-weight: bold;
    font-size: 16px;
    width: 100px;
}
.totalsval {
    font-size: 16px;
    width: 120px;
    display: inline-block;
}
.logout_btn {
    height: 45px;
    overflow: hidden;
}
.toolbarbtn {
    width:45px;
    height:45px;
    display:inline-block;
    margin-left:8px;
    margin-bottom:8px !important;
    font-size: 14px !important;
    text-align: center;
}
.regbtn {
    width:75px;
    height:45px;
    display:inline-block;
    margin-left:8px;
    margin-bottom:8px !important;
    font-size: 13px !important;
    text-align: center;
}
.small-button {
    font-size: 14px !important;
    height: 30px;
    margin:0;
}
.settings-row {
    margin: 10px;
}
.inline {
    display: inline-block;
}
.settings-row label label {
    display: inline-block;
}
.fixedlabel {
    min-width:80px;
}
#regkey-inner {
    display:inline-block;
    width:160px;
    vertical-align:top;
}
#regkey-container {
    display:inline-block;
    width:160px;
    vertical-align:top;
    float: right;
}
.panel-body {
    padding-left: 0 !important;
    padding-right: 0 !important;
}
#ibox {
    position: absolute;
    right: 0;
    top:0;
    bottom: 0;
    width: 0;
    max-width: 450px;
    margin-bottom: 38px;
    overflow: visible !important;
    overflow-x: visible !important; /* Needed for when overflow is overridden */
}
#iboxhandle {
    position: absolute;
    width: 30px;
    height: 45px;
    top:5px;
    margin-left: -30px;
    line-height: 45px;
    text-align: center;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    cursor: ew-resize;
}
#iboxitem_contain {
    position: relative;
    min-width: 0;
    height: 100%;
    background-color: white;
    overflow-x: hidden !important;
}
#iboxitems {
    margin: 5px;
    margin-left: 15px;
    width: 440px;
    overflow-x: hidden !important;
}
.iboxitem {
    width: 134px;
    height: 134px;
    border: 2px solid #428BCA;
    border-radius: 4px;
    display: inline-block;
    background-color: #C5D0DC;
    margin: 4px;
    text-align: center;
    vertical-align: middle;
}
.ui-tabs .ui-tabs-nav li a {
    height: 44px !important;
    padding-top: 12px !important;
}
.navbar {
    border-bottom: 0 !important;
}
/* For android scanner */
.rotate {
    margin-bottom: 60px;
    behavior: url(-ms-transform.htc);
    /* Firefox */
    -moz-transform: rotate(90deg);
    /* Safari and Chrome */
    -webkit-transform: rotate(90deg);
    /* Opera */
    -o-transform: rotate(90deg);
    /* IE9 */
    -ms-transform: rotate(90deg);
    /* IE6,IE7 */
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
    /* IE8 */
    -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1);";
}
.field-button {
    height: 29px !important;
    margin-bottom: 4px !important;
}
.field-button-attach {
    margin-left: -4px !important;
}
#watermark {
    content : "";
    display: block;
    text-align: center;
    position: absolute;
    top: 0;
    left: 0;
    background-position: center center;
    background-repeat: no-repeat;
    padding: 10px;
    width: 99.5%;
    height: 99%;
    opacity : 0.2;
    z-index: -1;
}
.ui-autocomplete li {
    overflow-x: hidden !important;
}
.ui-autocomplete {
    max-height: 220px;
    overflow-y: auto;
    overflow-x: hidden;
}

#transactioninfo {
    max-width: 800px;
}

#transactiontable_processing {
    display: none;
}

#transactiontable_wrapper .col-sm-12 {
    padding: 0;
}

#transactiontable .table-header {
    font-size: 13px;
}

/* #Media Queries
================================================== */

/* Smaller than standard 960 (devices and browsers) */
@media only screen and (max-width: 959px) {
    #window_width_toggle {
        display: none;
    }
}

/* Tablet Portrait size to standard 960 (devices and browsers) */
@media only screen and (min-width: 768px) and (max-width: 959px) {

}

/* All Mobile Sizes (devices and browser) */
@media only screen and (max-width: 767px) {

}

/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {
    #reportcontain {
        width: 480px;
    }
    .hlabel {
        width: 100px;
    }
    #loginbox {
        width: 350px;
        margin-left:-175px;
    }
    #ibox {
        max-width: 300px;
    }
    #iboxitems {
        width: 290px;
    }
    #transactioninfo {
        max-width: 96%;
    }
}

/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@media only screen and (max-width: 479px) {
    #reportcontain {
        width: 480px;
    }
    .hlabel {
        width: 95px;
    }
    #loginbox {
        width: 100%;
        left: 0;
        padding: 5px;
        margin-left: 0;
    }
    .settings-row label label {
        min-width: 70px;
    }
    #regkey-container {
        width: 100%;
        margin-top: 20px;
        text-align: center;
    }
    #ibox {
        max-width: 160px;
    }
    #iboxitems {
        width: 150px;
    }
    .ui-dialog {
        width: 100% !important;
    }
}

